muahaha fr fixed spacing!

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -329,10 +329,11 @@ video {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  padding-left: 7rem;
-  padding-right: 7rem;
+  padding: 2rem 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 55rem;
+  width: 100%;
 }
 
 .single-proj h1 {
@@ -455,6 +456,23 @@ footer ul {
 
 .fa:hover {
   color: var(--secondary-color);
+}
+
+/* dynamic padding */
+
+.padding {
+  padding-left: 1rem; 
+  padding-right: 1rem;
+
+  @media (min-width: 640px) {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  @media (min-width: 1024px) {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 
 /* phone stuff */
